adicionando o logo correto e incrementando o title

--- a/Aula07-05/index.html
+++ b/Aula07-05/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <header>
-        <img src="./src/assets/images/neo-logo.svg" alt="logotipo da empresa neo, uma pequena mesa verde"
+        <img src="./src/assets/images/nextCentLogo.svg" alt="logotipo da empresa neo, uma pequena mesa verde"
         title="logo da empresa neo">
         <nav>
-            <a href="">Home</a>
-            <a href="">Service</a>
-            <a href="">Feature</a>
-            <a href="">Product</a>
-            <a href="">Testimonial</a>
-            <a href="">Faq</a>
+            <a href="" title="Home">Home</a>
+            <a href="" title="Service">Service</a>
+            <a href="" title="Feature">Feature</a>
+            <a href="" title="Product">Product</a>
+            <a href="" title="Testimonial">Testimonial</a>
+            <a href="" title="Faq">Faq</a>
         </nav>
         <div class="button-wrapper">
             <button>Login</button>
@@ -27,8 +27,8 @@
             <h1>Lessons and insights from 8 years</h1>
             <p>Where to grow your business as a photographer: site or social media?</p>
             <button>Register</button>
-            <img src="./src/assets/images/hero-ilustration.svg" alt="homem segurando um notebook projetando um sistema"
-            title="homem projetando um sistema">
+            <img src="./src/assets/images/hero-ilustration.svg" alt="ilustração de um homem segurando um notebook projetando um sistema"
+            title="ilustação de um homem projetando um sistema">
         </section>    
     </main>  
 </body>
