finalizando a primeira parte da página

--- a/Aula26-05/Projetos/Nexcent/index.html
+++ b/Aula26-05/Projetos/Nexcent/index.html
@@ -29,6 +29,30 @@
             <button class="buttonSignUp"><a href="">Sign Up</a></button>
         </div>
     </header>
-    
+    <main>
+        <div class="contentLessons">
+            <h1>Lessons and insights <span>from 8 years</span></h1>
+            <p>Where to grow your business as a photographer: site or social media?</p>
+            <button class="buttonPrimary">Register</button>
+        </div>
+        <div class="imgLessons">
+            <img src="./src/assets/images/heroImage.svg" alt="hero image">
+        </div>
+    </main>
+    <section class="ourClients">
+        <div class="ourClientsContent">
+            <h2>Our clients</h2>
+            <p>We have been working with some Fortune 500+ clients</p>
+        </div>
+        <div class="ourClientsLogo">
+            <img src="./src/assets/images/ourClientslogo1.svg" alt="logo da empresa 0">
+            <img src="/src/assets/images/ourClientslogo2.svg" alt="logo da empresa 1">
+            <img src="/src/assets/images/ourClientslogo3.svg" alt="logo da empresa 2">
+            <img src="/src/assets/images/ourClientslogo4.svg" alt="logo da empresa 3">
+            <img src="/src/assets/images/ourClientslogo5.svg" alt="logo da empresa 4">
+            <img src="/src/assets/images/ourClientslogo6.svg" alt="logo da empresa 5">
+            <img src="/src/assets/images/ourClientslogo7.svg" alt="logo da empresa 6">
+        </div>
+    </section>
 </body>
 </html>
