alinhando o logo no centro

--- a/Aula21-05/NavBars/Nav03/index.html
+++ b/Aula21-05/NavBars/Nav03/index.html
@@ -20,7 +20,7 @@
             </button>
         </nav>
         <img src="./src/assets/image/LogoWide1.svg" alt="logtype" id="logotype">
-        <button id="button">Button</button>
+        <div class="button"><button id="button">Button</button></div>
     </header>
 </body>
 </html>
