finalizado as sections manage e pixelgrade

--- a/Aula26-05/Projetos/Nexcent/index.html
+++ b/Aula26-05/Projetos/Nexcent/index.html
@@ -45,14 +45,43 @@
             <p>We have been working with some Fortune 500+ clients</p>
         </div>
         <div class="ourClientsLogo">
-            <img src="./src/assets/images/ourClientslogo1.svg" alt="logo da empresa 0">
-            <img src="/src/assets/images/ourClientslogo2.svg" alt="logo da empresa 1">
-            <img src="/src/assets/images/ourClientslogo3.svg" alt="logo da empresa 2">
-            <img src="/src/assets/images/ourClientslogo4.svg" alt="logo da empresa 3">
-            <img src="/src/assets/images/ourClientslogo5.svg" alt="logo da empresa 4">
-            <img src="/src/assets/images/ourClientslogo6.svg" alt="logo da empresa 5">
-            <img src="/src/assets/images/ourClientslogo7.svg" alt="logo da empresa 6">
+            <img src="./src/assets/images/ourClientslogo1.svg" alt="logo da empresa 0" title="logo da empresa 0" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo2.svg" alt="logo da empresa 1" title="logo da empresa 1" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo3.svg" alt="logo da empresa 2" title="logo da empresa 2" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo4.svg" alt="logo da empresa 3" title="logo da empresa 3" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo5.svg" alt="logo da empresa 4" title="logo da empresa 4" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo6.svg" alt="logo da empresa 5" title="logo da empresa 5" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo7.svg" alt="logo da empresa 6" title="logo da empresa 6" loading="lazy">
         </div>
+    </section>
+    <section class="manageSystem">
+        <h2>Manage your entire community in a single system</h2>
+        <p>Who is Nextcent suitable for?</p>
+        <div class="cardsWrapper">
+            <div class="card">
+                <img src="./src/assets/images/membership.svg" alt="icone de 3 bonequinhos juntos" title="icone de organização" loading="lazy">
+                <h3>Membership Organizations</h3>
+                <p>Our membership management software provides full automation of membership renewals and payments</p>
+            </div>
+            <div class="card">
+                <img src="./src/assets/images/national.svg" alt="icone de um predio ou filial" title="icone predio de uma filial" loading="lazy">
+                <h3>National Associations</h3>
+                <p>Our membership management software provides full automation of membership renewals and payments</p>
+            </div>
+            <div class="card">
+                <img src="./src/assets/images/clubs.svg" alt="3 mãos juntas no meio simbolizando um grupo de mãos" title="icone de 3 mãos juntas" loading="lazy">
+                <h3>Clubs And Groups</h3>
+                <p>Our membership management software provides full automation of membership renewals and payments</p>
+            </div>
+        </div>
+    </section>
+    <section class="pixelGrade">
+        <img src="./src/assets/images/pixelGrade.svg" alt="ilustração de um homem ensinando como funciona a parte de cadastro" title="ilustação de um cadastro" loading="lazy">
+        <aside>
+            <h2>The unseen of spending three years at Pixelgrade</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+            <button>Learn More</button>
+        </aside>
     </section>
 </body>
 </html>
