Finalizando a section Helping a local

--- a/Aula26-05/Projetos/Nexcent/index.html
+++ b/Aula26-05/Projetos/Nexcent/index.html
@@ -83,5 +83,41 @@
             <button>Learn More</button>
         </aside>
     </section>
+    <section class="business">
+        <aside>
+            <h2>Helping a local <span>business reinvent itself</span></h2>
+            <p>We reached here with our hard work and dedication</p>
+        </aside>
+        <div class="benefits">
+            <div class="benefit">
+                <img src="./src/assets/images/members.svg" alt="ícone dos membros" title="membros" loading="lazy">
+                <div class="benefitDescription">
+                    <h3>2,245,341</h3>
+                    <p>Members</p>
+                </div>
+            </div>
+            <div class="benefit">
+                <img src="./src/assets/images/clubs2.svg" alt="ícone dos nossos clubes" title="clubes" loading="lazy">
+                <div class="benefitDescription">
+                    <h3>46,328</h3>
+                    <p>Clubs</p>
+                </div>
+            </div>
+            <div class="benefit">
+                <img src="./src/assets/images/eventBookings.svg" alt="ícone do event booking" title="Event booking" title="loading">
+                <div class="benefitDescription">
+                    <h3>828,867</h3>
+                    <p>Event Bookings</p>
+                </div>
+            </div>
+            <div class="benefit">
+                <img src="./src/assets/images/payments.svg" alt="ícone de pagamento" title="pagamento" loading="lazy">
+                <div class="benefitDescription">
+                    <h3>1,926,436</h3>
+                    <p>Payments</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
