--- a/Aula26-05/Projetos/Nexcent/index.html
+++ b/Aula26-05/Projetos/Nexcent/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexcent</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./src/style/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -45,13 +49,20 @@
             <p>We have been working with some Fortune 500+ clients</p>
         </div>
         <div class="ourClientsLogo">
-            <img src="./src/assets/images/ourClientslogo1.svg" alt="logo da empresa 0" title="logo da empresa 0" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo2.svg" alt="logo da empresa 1" title="logo da empresa 1" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo3.svg" alt="logo da empresa 2" title="logo da empresa 2" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo4.svg" alt="logo da empresa 3" title="logo da empresa 3" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo5.svg" alt="logo da empresa 4" title="logo da empresa 4" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo6.svg" alt="logo da empresa 5" title="logo da empresa 5" loading="lazy">
-            <img src="./src/assets/images/ourClientslogo7.svg" alt="logo da empresa 6" title="logo da empresa 6" loading="lazy">
+            <img src="./src/assets/images/ourClientslogo1.svg" alt="logo da empresa 0" title="logo da empresa 0"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo2.svg" alt="logo da empresa 1" title="logo da empresa 1"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo3.svg" alt="logo da empresa 2" title="logo da empresa 2"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo4.svg" alt="logo da empresa 3" title="logo da empresa 3"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo5.svg" alt="logo da empresa 4" title="logo da empresa 4"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo6.svg" alt="logo da empresa 5" title="logo da empresa 5"
+                loading="lazy">
+            <img src="./src/assets/images/ourClientslogo7.svg" alt="logo da empresa 6" title="logo da empresa 6"
+                loading="lazy">
         </div>
     </section>
     <section class="manageSystem">
@@ -59,28 +70,36 @@
         <p>Who is Nextcent suitable for?</p>
         <div class="cardsWrapper">
             <div class="card">
-                <img src="./src/assets/images/membership.svg" alt="icone de 3 bonequinhos juntos" title="icone de organização" loading="lazy">
+                <img src="./src/assets/images/membership.svg" alt="icone de 3 bonequinhos juntos"
+                    title="icone de organização" loading="lazy">
                 <h3>Membership Organizations</h3>
                 <p>Our membership management software provides full automation of membership renewals and payments</p>
             </div>
             <div class="card">
-                <img src="./src/assets/images/national.svg" alt="icone de um predio ou filial" title="icone predio de uma filial" loading="lazy">
+                <img src="./src/assets/images/national.svg" alt="icone de um predio ou filial"
+                    title="icone predio de uma filial" loading="lazy">
                 <h3>National Associations</h3>
                 <p>Our membership management software provides full automation of membership renewals and payments</p>
             </div>
             <div class="card">
-                <img src="./src/assets/images/clubs.svg" alt="3 mãos juntas no meio simbolizando um grupo de mãos" title="icone de 3 mãos juntas" loading="lazy">
+                <img src="./src/assets/images/clubs.svg" alt="3 mãos juntas no meio simbolizando um grupo de mãos"
+                    title="icone de 3 mãos juntas" loading="lazy">
                 <h3>Clubs And Groups</h3>
                 <p>Our membership management software provides full automation of membership renewals and payments</p>
             </div>
         </div>
     </section>
     <section class="pixelGrade">
-        <img src="./src/assets/images/pixelGrade.svg" alt="ilustração de um homem ensinando como funciona a parte de cadastro" title="ilustação de um cadastro" loading="lazy">
+        <img src="./src/assets/images/pixelGrade.svg"
+            alt="ilustração de um homem ensinando como funciona a parte de cadastro" title="ilustação de um cadastro"
+            loading="lazy">
         <aside>
             <h2>The unseen of spending three years at Pixelgrade</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
-            <button>Learn More</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam
+                vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique
+                iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae,
+                tempus sem. Donec elementum pulvinar odio.</p>
+            <button class="buttonPrimary">Learn More</button>
         </aside>
     </section>
     <section class="business">
@@ -104,7 +123,8 @@
                 </div>
             </div>
             <div class="benefit">
-                <img src="./src/assets/images/eventBookings.svg" alt="ícone do event booking" title="Event booking" title="loading">
+                <img src="./src/assets/images/eventBookings.svg" alt="ícone do event booking" title="Event booking"
+                    title="loading">
                 <div class="benefitDescription">
                     <h3>828,867</h3>
                     <p>Event Bookings</p>
@@ -119,5 +139,95 @@
             </div>
         </div>
     </section>
+    <section class="howToDesign">
+        <img src="./src/assets/images/mulherMechendoNoCelular.svg" alt="ilustração de uma mullher mechendo num celular"
+            title="ilustração de uma mulher mechendo no celular" loading="lazy">
+        <aside>
+            <h2>How to design your site footer like we did</h2>
+            <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa
+                nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac
+                habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue
+                vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur
+                quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur
+                faucibus ipsum id gravida.</p>
+            <button class="buttonPrimary" style="margin-top: 20px;">Learn more</button>
+        </aside>
+    </section>
+    <section class="timSmith">
+        <img src="./src/assets/images/logoDaTesla.svg" alt="logo da tesla" title="logo da tesla" loading="lazy">
+        <div class="costumerContent">
+            <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus
+                tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim.
+                Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi
+                blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget
+                lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat
+                ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh
+                id sem dignissim finibus ac sit amet magna.</p>
+            <div class="costumerInformation">
+                <p>Tim Smith</p>
+                <p>British Dragon Boat Racing Association</p>
+            </div>
+            <div class="costumerContainer">
+                <div class="customersItens">
+                    <img src="./src/assets/images/ourClientsLogo1roxo.svg" alt="logo da empresa com logo roxo"
+                        loading="lazy">
+                    <img src="./src/assets/images/ourClientslogo2.svg" alt="logo da empresa 2" loading="lazy">
+                    <img src="./src/assets/images/ourClientslogo3.svg" alt="logo da empresa 3" loading="lazy">
+                    <img src="./src/assets/images/ourClientslogo4.svg" alt="logo da empresa 4" loading="lazy">
+                    <img src="./src/assets/images/ourClientslogo5.svg" alt="logo da empresa 5" loading="lazy">
+                    <img src="./src/assets/images/ourClientslogo6.svg" alt="logo da empresa 6" loading="lazy">
+                </div>
+                <div class="customerNavigation">
+                    <button>Meet all customers
+                        <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="caringMarketing">
+        <div class="caringMarketingText">
+            <h2>Caring is the new marketing</h2>
+            <p>The Nexcent blog is the best place to read about the latest membership insights, trends and more. See
+                who's joining the community, read about how our community are increasing their membership income and
+                lot's more.</p>
+        </div>
+        <div class="caringMarketingConteiner">
+            <article class="caringCards">
+                <img src="./src/assets/images/mulherUsandoOComputador.svg" alt="mulher usando o notebook"
+                    loading="lazy">
+                <div class="caringCardsContent">
+                    <p>Creating Streamlined Safeguarding Processes with OneRen</p>
+                    <button>Readmore
+                        <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy">
+                    </button>
+                </div>
+            </article>
+            <article class="caringCards">
+                <img src="./src/assets/images/alguemUsandoONotebookParaCalculos.svg"
+                    alt="alguém usando o notebook para ver gráficos" loading="lazy">
+                <div class="caringCardsContent">
+                    <p>What are your safeguarding responsibilities and how can you manage them?</p>
+                    <button>Readmore
+                        <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy">
+                    </button>
+                </div>
+            </article>
+            <article class="caringCards">
+                <img src="./src/assets/images/mulherUsandoONotebook.svg" alt="mulher usando o notebook" loading="lazy">
+                <div class="caringCardsContent">
+                    <p>Revamping the Membership Model with Triathlon <br>Australia</p>
+                    <button>Readmore
+                        <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy">
+                    </button>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section class="antesDoFooter">
+        <h2>Pellentesque suscipit fringilla libero eu.</h2>
+        <button>Get a Demo <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy"></button>
+    </section>
 </body>
+
 </html>
