finalizando a estilização do projeto nexcent

--- a/Aula26-05/Projetos/Nexcent/index.html
+++ b/Aula26-05/Projetos/Nexcent/index.html
@@ -226,8 +226,59 @@
     </section>
     <section class="antesDoFooter">
         <h2>Pellentesque suscipit fringilla libero eu.</h2>
-        <button>Get a Demo <img src="./src/assets/images/arrowRight.svg" alt="seta pra direita" loading="lazy"></button>
+        <button class="buttonPrimary">Get a Demo <img src="./src/assets/images/arrowRightWhite.svg"
+                alt="seta pra direita" loading="lazy"></button>
     </section>
+    <footer>
+        <div class="socialMedias">
+            <img src="./src/assets/images/Logo2.svg" alt="logo da nextcent" loading="lazy">
+            <div class="text">
+                <p>Copyright © 2020 Nexcent ltd.</p>
+                <p>All rights reserved</p>
+            </div>
+            <nav class="footerNav">
+                <a href="instagram da nexcent"><img src="./src/assets/images/IconeDoInstagram.svg"
+                        alt="ícone do instagram" loading="lazy"></a>
+                <a href="dribbble da nexcent"><img src="./src/assets/images/IconeDoDribbble.svg" alt="ícone do dibbble"
+                        loading="lazy"></a>
+                <a href="twitter da nexcent"><img src="./src/assets/images/IconeDoTwitter.svg" alt="ícone do twitter"
+                        loading="lazy"></a>
+                <a href="youtube da nexcent"><img src="./src/assets/images/IconeDoYoutube.svg" alt="ícone do youtube"
+                        loading="lazy"></a>
+            </nav>
+        </div>
+        <div class="footerContent">
+            <div class="information">
+                <h2>Company</h2>
+                <div class="navCompany">
+                    <a href="About us">About us</a>
+                    <a href="Blog">Blog</a>
+                    <a href="Contact us">Contact us</a>
+                    <a href="Pricing">Pricing</a>
+                    <a href="Testimonials">Testimonials</a>
+                </div>
+            </div>
+            <div class="information">
+                <h2>Support</h2>
+                <div class="navCompany">
+                    <a href="Help center">Help center</a>
+                    <a href="Terms of service">Terms of service</a>
+                    <a href="Legal">Legal</a>
+                    <a href="Privacy policy">Privacy policy</a>
+                    <a href="Status">Status</a>
+                </div>
+            </div>
+            <div class="stayUp">
+                <h2>Stay up to date</h2>
+                <div class="send">
+                    <input type="email" placeholder="Your email address">
+                    <button>
+                        <img src="./src/assets/images/botaoDeEnviar.svg" alt="botão de enviar" loading="lazy">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
