finalizando a section browse

--- a/Aula26-05/Projetos/Furniro/index.html
+++ b/Aula26-05/Projetos/Furniro/index.html
@@ -38,6 +38,24 @@
             <button>BUY NOW</button>
         </div>
     </main>
+    <section class="browse">
+        <h2>Browse The Range</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="articleWrapper">
+            <article>
+                <img src="./src/assets/images/dining.svg" alt="sala de jantar" title="dining room" loading="lazy">
+                <p>Dining</p>
+            </article>
+            <article>
+                <img src="./src/assets/images/living.svg" alt="sala de jantar" title="living room" loading="lazy">
+                <p>Living</p>
+            </article>
+            <article>
+                <img src="./src/assets/images/bedroom.svg" alt="sala de jantar" title="bedroom room" loading="lazy">
+                <p>Bedroom</p>
+            </article>
+        </div>
+    </section>
 </body>
 
 </html>
