produtos da seção Our Products

--- a/Aula26-05/Projetos/Furniro/index.html
+++ b/Aula26-05/Projetos/Furniro/index.html
@@ -56,6 +56,97 @@
             </article>
         </div>
     </section>
+    <section class="ourProducts">
+        <h2>Our Products</h2>
+        <div class="productsWrapper">
+            <article class="products">
+                <img src="./src/assets/images/mesinha.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Syltherine</h3>
+                    <p>Stylish cafe chair</p>
+                    <div class="price">
+                        <p>Rp 2.500.000</p>
+                        <p>Rp 3.500.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/cadeira.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Leviosa</h3>
+                    <p>Stylish cafe chair</p>
+                    <div class="price">
+                        <p>Rp 2.500.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/sofa.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Lolito</h3>
+                    <p>Luxury big sofa</p>
+                    <div class="price">
+                        <p>Rp 7.000.000</p>
+                        <p>Rp 14.000.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/mesinha.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Respira</h3>
+                    <p>Outdoor bar table and stool</p>
+                    <div class="price">
+                        <p>Rp 500.000</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+        <div class="productsWrapper">
+            <article class="products">
+                <img src="./src/assets/images/iluminaria.svg" alt="iluminária" loading="lazy">
+                <div class="productContent">
+                    <h3>Grifo</h3>
+                    <p>Night lamp</p>
+                    <div class="price">
+                        <p>Rp 1.500.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/sofa2.svg" alt="sofá" loading="lazy">
+                <div class="productContent">
+                    <h3>Muggo</h3>
+                    <p>Small mug</p>
+                    <div class="price">
+                        <p>Rp 150.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/sofa3.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Pingky</h3>
+                    <p>Cute bed set</p>
+                    <div class="price">
+                        <p>Rp 7.000.000</p>
+                        <p>Rp 14.000.000</p>
+                    </div>
+                </div>
+            </article>
+            <article class="products">
+                <img src="./src/assets/images/sofa4.svg" alt="mesinha" loading="lazy">
+                <div class="productContent">
+                    <h3>Potty</h3>
+                    <p>Minimalist flower pot</p>
+                    <div class="price">
+                        <p>Rp 500.000</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+        <button>Show More</button>
+    </section>
 </body>
 
 </html>
